; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/jazz/extr_irq.c_disable_r4030_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/jazz/extr_irq.c_disable_r4030_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JAZZ_IRQ_START = common dso_local global i32 0, align 4
@r4030_lock = common dso_local global i32 0, align 4
@JAZZ_IO_IRQ_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disable_r4030_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @JAZZ_IRQ_START, align 4
  %7 = sub i32 %5, %6
  %8 = shl i32 1, %7
  %9 = xor i32 %8, -1
  store i32 %9, i32* %3, align 4
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @spin_lock_irqsave(i32* @r4030_lock, i64 %10)
  %12 = load i32, i32* @JAZZ_IO_IRQ_ENABLE, align 4
  %13 = call i32 @r4030_read_reg16(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @JAZZ_IO_IRQ_ENABLE, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @r4030_write_reg16(i32 %16, i32 %17)
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @spin_unlock_irqrestore(i32* @r4030_lock, i64 %19)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @r4030_read_reg16(i32) #1

declare dso_local i32 @r4030_write_reg16(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
